cmake_minimum_required(VERSION 3.12)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)
add_executable(LeetCode main.cpp)
#add_executable(LeetCode main.cpp 5.LongestPalindromicSubstring/5.cpp 6.ZigZagConversion/6.cpp 4.MedianofTwoSortedArrays/4.cpp 11.ContainerWithMostWater/11.cpp 62.UniquePaths/62.cpp 139.WordBreak/139.cpp 523.ContinuousSubarraySum/523.cpp 673.NumberofLongestIncreasingSubsequence/673.cpp "375.GuessNumberHigherorLower II/375.cpp" 300.LongestIncreasingSubsequence/300.cpp 467.UniqueSubstringsinWraparoundString/467.cpp 515.LongestPalindromicSubsequence/515.cpp)